?/?/2007 autofs-5.0.1
---------------------
- fix typo in Fix typo in var when removing temp directory.
- remove redundant rpath link option.
- ignore "winbind" if it appears in "automount" nsswitch.conf.
- fix another expire regression introduced in the "mitigate manual umount" patch.
- correct check for busy offset mounts before offset umount.

4/1/2007 autofs-5.0.1 rc3
-------------------------
- fix handling of autofs specific mount options.
- fix include check full patch for file map of same name.
- fix cache entrys not being cleaned up on submount expire.
- fix LDAP lookup delete cache entry only if entry doesn't exist. 
- add missing socket close in replicated host check (Jeff Moyer).
- remove unused option UNDERSCORETODOT from default config files.
- make default installed master map for /net use "-hosts" instead
  of auto.net.
- fix included map recursive map key lookup.
  - and fix the recursive map key lookup for browsable map case.
- review and fix master map options update for map reload.
- fix "-fstype=nfs4" handling.
- fix get_query_dn not looking in subtree for LDAP search.
- allow syntax "--timeout <secs>" for backward compatibility.
- make masked_match independent of hostname for exports comparison.
- fix file handle leak in nsswitch parser.
- fix memory leak in mount and expire request processing.
- add additional check to prevent running of cancelled tasks.
- fix potential file handle leakage in rpc_subs.c for some failure cases.
- fix file handle leak in included map lookup.
- fix "-fstype=nfs4" server probing.
- set close-on-exec flag on open files where possible.
- fix parsing of numeric host names in LDAP map specs.
- fix get_query_dn not looking in subtree for LDAP search (missed second
  occurance).
- allow additional common LDAP attributes in map dn.
- deal with changed semantics of mkdir in 2.6.19.
- fix macro table locking.
- fix nsswitch parser locking.
- allow only one master map read task at a time.
- fix misc memory leaks.